feat: coordinates and images verification

--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -9,7 +9,7 @@
 
 <div id="rs-nav-background">
     <div id="rs-small-navigation">
-            <a id="rs-small-home" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
+            <a id="rs-small-home" href="{{ url_for('reisesteine.index') }}"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
             <a id="rs-small-menu" href="#" >
                 <img src="{{ url_for('static', filename='img/sandwich_button.svg') }}"/>
             </a>
