--- a/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
@@ -89,6 +89,9 @@
             </div>    
             <div class="col-md-6">
                 <h2>{{_('Stein')}}</h2>
+                <small class="form-text text-muted mb-3">
+                    <br/><br/>
+                </small>
                 <div class="card">
                     <div class="card-body">
                         <div class="form-row">
@@ -204,10 +207,12 @@
                     {{ form.bemerkungen(class_="form-control", rows=5) }}
                 </div>
                 <div class="form-group">
+                    {#
                     {{ form.recaptcha }}
                     {% if form.recaptcha.errors|length > 0 %}
                         <p class="uk-text-danger">reCaptcha verification Failed</p>
                     {% endif %}
+                    #}
                 </div>
             </div>
         </div>
